--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "axios": "^1.13.2",
     "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
+    "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
     "expo-location": "~19.0.7",
+    "expo-notifications": "~0.32.13",
     "expo-router": "~6.0.15",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
